# sentra_core

./: .env.example  .gitignore  Cargo.toml  README.md  build-and-run.ps1  docker-compose.yml  docker-logs.ps1  docker-run.ps1  run-api.ps1  run-worker.ps1  test-app1-endpoints.ps1  test-requests.ps1
.github/workflows/: ci-cd.yml
crates/core-api/: Cargo.toml  Dockerfile
crates/core-api/src/: main.rs
crates/core-worker/: Cargo.toml  Dockerfile
crates/core-worker/src/: main.rs
frontend-dark/: admin-dashboard.html  admin.html  asset-registry.html  audit.html  bulk-upload.html  dashboard.html  escrow.html  index.html  indexer.html  marketplace.html  onboarding.html  revenue.html  smart-contract.html  tokenization.html
frontend-dark/assets/: app.css  app.js  global.css  login.css
migrations/: 001_init.sql
