[package]
name = "core-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.25.5", features = ["tokio-comp"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
thiserror = "1.0.69"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
